--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,10 @@
 PORT = 3001
-DB_URL = "mongodb+srv://root:root@cluster0.q7qyk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-JWT_ACCESS_SECRET = "barnaul22"
-JWT_REFRESH_SECRET = "piter52"
+DB_URL = ""
+JWT_ACCESS_SECRET = ""
+JWT_REFRESH_SECRET = ""
 SMTP_HOST=smtp.mail.ru
 SMTP_PORT=465
-SMTP_USER=yuriy_kuznetsov_73@mail.ru
-SMTP_PASSWORD=maiuryjFqbPvu9acfhhy
+SMTP_USER=
+SMTP_PASSWORD=
 API_URL=http://localhost:3001
 CLIENT_URL=http://localhost:3000
